--- a/project-1/data_model.ipynb
+++ b/project-1/data_model.ipynb
@@ -1382,6 +1382,8 @@
     "a = gmm_data_model()\n",
     "likelihoods, scores = a.train_model(X, 2, 20)\n",
     "plt.plot(likelihoods)\n",
+    "plt.xlabel(\"Epochs\")\n",
+    "plt.ylabel(\"Log Likelihood\")\n",
     "plt.show()"
    ]
   },
@@ -1898,6 +1900,8 @@
     "a = gmm_data_model()\n",
     "likelihoods, scores = a.train_model(X, 2, 20)\n",
     "plt.plot(likelihoods)\n",
+    "plt.xlabel(\"Epochs\")\n",
+    "plt.ylabel(\"Log Likelihood\")\n",
     "plt.show()"
    ]
   },
